# axum-chat-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  prod.env  sqlx-data.json
migrations/: 20230118015213_chat.down.sql  20231101133101_init.down.sql  20231101133101_init.up.sql
schema/: chat.dbml  schema.sql
src/: error.rs  extractor.rs  lib.rs  main.rs
src/api/: auth.rs  dto.rs  event.rs  extractor.rs  friend.rs  invitation.rs  member.rs  message.rs  mod.rs  room.rs  router.rs  user.rs  validator.rs  websocket.rs
src/conn/: client.rs  hub.rs  mod.rs  room.rs  state.rs
src/core/: constant.rs  error.rs  mod.rs  result.rs  validator.rs
src/db/: friend.rs  invitation.rs  member.rs  message.rs  mod.rs  model.rs  room.rs  session.rs  user.rs
src/store/: friend.rs  init.rs  member.rs  message.rs  mod.rs  model.rs  room.rs  session.rs  user.rs
src/util/: common.rs  config.rs  mod.rs  password.rs  token.rs
src/util/token/: claims.rs  datetime.rs  jwt.rs  mod.rs
src/ws/: channel.rs  event.rs  handler.rs  mod.rs  user_socket.rs
