[package]
name = "server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers", "ws", "multipart"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
bcrypt = "0.14.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "offline"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower-http = { version = "0.4.0", features = ["sensitive-headers", "trace", "limit"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }
