[package]
name = "server"
version = "0.4.2"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
argon2 = "0.5"
dotenvy = "0.15"
futures = "0.3"
jsonwebtoken = "9"
rand = "0.8"
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "time", "uuid", "migrate"] }
thiserror = "1"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["timeout"]}
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
